dark mode fixes

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -7,7 +7,7 @@
   }
 
   .card,
-  .footer,
+  .footer:not(.footer-transparent),
   .modal-content,
   .modal-header,
   .dropdown-menu,
