--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -77,40 +77,40 @@ $utilities: (
   "border": (
     property: border,
     values: (
-      null: $border-width solid $border-color,
-      wide: $border-width-wide solid $border-color,
+      null: $border-width solid $border-color-transparent,
+      wide: $border-width-wide solid $border-color-transparent,
       0: 0,
     )
   ),
   "border-top": (
     property: border-top,
     values: (
-      null: $border-width solid $border-color,
-      wide: $border-width-wide solid $border-color,
+      null: $border-width solid $border-color-transparent,
+      wide: $border-width-wide solid $border-color-transparent,
       0: 0,
     )
   ),
   "border-right": (
     property: border-right,
     values: (
-      null: $border-width solid $border-color,
-      wide: $border-width-wide solid $border-color,
+      null: $border-width solid $border-color-transparent,
+      wide: $border-width-wide solid $border-color-transparent,
       0: 0,
     )
   ),
   "border-bottom": (
     property: border-bottom,
     values: (
-      null: $border-width solid $border-color,
-      wide: $border-width-wide solid $border-color,
+      null: $border-width solid $border-color-transparent,
+      wide: $border-width-wide solid $border-color-transparent,
       0: 0,
     )
   ),
   "border-left": (
     property: border-left,
     values: (
-      null: $border-width solid $border-color,
-      wide: $border-width-wide solid $border-color,
+      null: $border-width solid $border-color-transparent,
+      wide: $border-width-wide solid $border-color-transparent,
       0: 0,
     )
   ),
