--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -73,7 +73,7 @@ $text-muted-light-opacity: .4 !default;
 $border-opacity: .16 !default;
 $border-dark-opacity: .24 !default;
 
-$light: #f5f7fb !default;
+$light: #f0f3f6 !default;
 $dark: #354052 !default;
 
 $body-bg: $light !default;
@@ -299,7 +299,7 @@ $btn-font-weight: $font-weight-medium !default;
 $btn-border-radius: 3px !default;
 
 //cards
-$card-border-color: $border-color !default;
+$card-border-color: $border-color-transparent !default;
 $card-border-radius: $border-radius !default;
 $card-cap-bg: $min-black !default;
 
@@ -391,11 +391,13 @@ $navbar-padding-y: .25rem !default;
 
 $navbar-light-color: rgba($body-color, $text-muted-opacity) !default;
 $navbar-light-brand-color: $body-color !default;
+$navbar-light-border-color: $border-color-transparent !default;
 $navbar-light-active-color: $body-color !default;
 $navbar-light-disabled-color: rgba($body-color, .3) !default;
 
 $navbar-dark-color: rgba($white, $text-muted-opacity) !default;
 $navbar-dark-brand-color: $white !default;
+$navbar-light-border-color: $border-color-transparent !default;
 $navbar-dark-active-color: $white !default;
 $navbar-dark-disabled-color: rgba($white, .3) !default;
 
@@ -452,15 +454,15 @@ $spinner-border-width-sm: 1px !default;
 
 //tables
 $table-color: inherit !default;
-$table-head-border-color: $border-color !default;
+$table-border-color: $border-color-transparent !default;
+$table-head-border-color: $border-color-transparent !default;
 $table-head-padding-y: .5rem !default;
 $table-head-color: $text-muted !default;
 $table-head-bg: $min-black !default;
-$table-group-seperator-color: $border-color !default;
 $table-striped-order: even !default;
 $table-striped-bg: $min-black !default;
 $table-accent-bg: $min-black !default;
-$table-group-separator-color: $border-color !default;
+$table-group-separator-color: $border-color-transparent !default;
 
 //toasts
 $toast-border-color: $border-color !default;
@@ -479,7 +481,7 @@ $list-group-action-color: inherit !default;
 $list-group-bg: inherit !default;
 
 $input-disabled-bg: $gray-100 !default;
-$input-border-color: $border-color-dark !default;
+$input-border-color: $border-color-dark-transparent !default;
 $input-placeholder-color: $text-muted-light !default;
 
 $input-group-addon-bg: $min-black !default;
