--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -298,7 +298,7 @@ Navbar toggler
 Navbar light
  */
 .navbar-light {
-  box-shadow: inset 0 -1px 0 0 $border-color;
+  box-shadow: inset 0 -1px 0 0 $navbar-light-border-color;
   background-color: $white;
 }
 
