--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -27,7 +27,7 @@ SOCIAL COLORS
 
     .bg-#{$color}-lt {
       color: $value !important;
-      background: theme-color-lighter($value) !important;
+      background: theme-color-lighter($value, true) !important;
     }
   }
 }
